Fix quiz not to overlap into footer

--- a/frontend/src/styling/quiz.scss
+++ b/frontend/src/styling/quiz.scss
@@ -6,9 +6,12 @@
     align-items: center;
     margin-left: 25px;
     margin-right: 25px;
+    // margin-bottom: 45px;
+    bottom: 45px;
   }
   
   .quiz { 
+    overflow: auto;
     background: rgba(240, 240, 240, 0.52);
     border-radius: 5px;
     width: 800px;
@@ -23,6 +26,7 @@
   }
 
   .question-section{
+    position: relative;
     // border: 1px solid black;
     height: 150px;
     width: 670px;
@@ -40,6 +44,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    position: relative;
     width: 100%;
   }
   
@@ -72,3 +77,12 @@
   .quiz-answer-text {
     width: 85%;
   }
+
+  // @media only screen and (max-height: 930px) {
+  //   .quiz-wrapper {
+  //     height: 100%;
+  //   }
+  //   // .quiz {
+  //   //   height: 85%;
+  //   // }
+  // }
